@@ -1,3 +1,7 @@
+2007-09-05 Ingo Renner <ing.renner@dkd.de>
+
+	* class.tx_tcbeuser_editform.php could not get loaded in mod5
+
 2007-05-04 Ingo Renner <ingo.renner@dkd.de>
 
 	* fixed bug with missing hook class when in FE edit mode
